--- a/main.css
+++ b/main.css
@@ -3,12 +3,11 @@
 @tailwind utilities;
 @tailwind screens;
 
-#header {
-    animation-duration: 1.5s;
+/* #header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/resources/img/background.jpeg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
-}
+} */
 
