--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -94959,3 +94959,58 @@ video {
     background-size: cover;
 } */
 
+#initial {
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+}
+
+#initial h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid #d7b740; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  -webkit-animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+          animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+
+@-webkit-keyframes typing {
+  from { width: 0
+  }
+
+  to { width: 100%
+  }
+}
+
+@keyframes typing {
+  from { width: 0
+  }
+
+  to { width: 100%
+  }
+}
+
+/* The typewriter cursor effect */
+
+@-webkit-keyframes blink-caret {
+  from, to { border-color: transparent
+  }
+
+  50% { border-color: orange;
+  }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent
+  }
+
+  50% { border-color: orange;
+  }
+}
