--- a/main.css
+++ b/main.css
@@ -3,17 +3,14 @@
 @tailwind utilities;
 @tailwind screens;
 
-/* #header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/resources/img/background.jpeg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-} */
-
 #initial {
+  animation-duration: 2s;
+  animation-delay: 4s;
+}
+
+#landing {
   animation-duration: 1s;
-  animation-delay: 6s;
+  animation-delay: 1s;
 }
 
 #initial h1 {
