--- a/main.css
+++ b/main.css
@@ -4,30 +4,46 @@
 @tailwind screens;
 #initial {
   -webkit-animation-duration: 2s;
-          animation-duration: 2s;
+  animation-duration: 2s;
   -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  animation-delay: 4s;
 }
 
 #landing {
   background-blend-mode: soft-light;
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+
+#initial #marquee-container {
+  width: 360px;
+}
+@media only screen and (min-width: 1024px) {
+  #initial #marquee-container {
+    width: 600px;
+  }
+}
+
+@media only screen and (min-width: 1366px) {
+  #initial #marquee-container {
+    width: 780px;
+  }
 }
 
 #initial p {
   overflow: hidden;
   /* Ensures the content is not revealed until the animation */
-  border-right: .1em solid #a48623;
+  border-right: 0.1em solid #a48623;
   /* The typwriter cursor */
   white-space: nowrap;
   /* Keeps the content on a single line */
   margin: 0 auto;
   /* Gives that scrolling effect as the typing happens */
-  -webkit-animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
-          animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+  -webkit-animation: typing 3.5s steps(40, end),
+    blink-caret 0.75s step-end infinite;
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 /* The typing effect */
@@ -50,7 +66,8 @@
 
 /* The typewriter cursor effect */
 @-webkit-keyframes blink-caret {
-  from, to {
+  from,
+  to {
     border-color: transparent;
   }
   50% {
@@ -58,7 +75,8 @@
   }
 }
 @keyframes blink-caret {
-  from, to {
+  from,
+  to {
     border-color: transparent;
   }
   50% {
@@ -73,39 +91,39 @@
   height: 125px;
   will-change: background-position;
   -webkit-animation-name: fly-cycle;
-          animation-name: fly-cycle;
+  animation-name: fly-cycle;
   -webkit-animation-timing-function: steps(10);
-          animation-timing-function: steps(10);
+  animation-timing-function: steps(10);
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 .bird--one {
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 
 .bird--two {
   -webkit-animation-duration: 0.9s;
-          animation-duration: 0.9s;
+  animation-duration: 0.9s;
   -webkit-animation-delay: -0.75s;
-          animation-delay: -0.75s;
+  animation-delay: -0.75s;
 }
 
 .bird--three {
   -webkit-animation-duration: 1.25s;
-          animation-duration: 1.25s;
+  animation-duration: 1.25s;
   -webkit-animation-delay: -0.25s;
-          animation-delay: -0.25s;
+  animation-delay: -0.25s;
 }
 
 .bird--four {
   -webkit-animation-duration: 1.1s;
-          animation-duration: 1.1s;
+  animation-duration: 1.1s;
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 
 .bird-container {
@@ -113,42 +131,42 @@
   top: 40%;
   left: -10%;
   -webkit-transform: scale(0) translateX(-10vw);
-          transform: scale(0) translateX(-10vw);
+  transform: scale(0) translateX(-10vw);
   will-change: transform;
   -webkit-animation-name: fly-right-one;
-          animation-name: fly-right-one;
+  animation-name: fly-right-one;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 .bird-container--one {
   -webkit-animation-duration: 15s;
-          animation-duration: 15s;
+  animation-duration: 15s;
   -webkit-animation-delay: 0;
-          animation-delay: 0;
+  animation-delay: 0;
 }
 
 .bird-container--two {
   -webkit-animation-duration: 16s;
-          animation-duration: 16s;
+  animation-duration: 16s;
   -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  animation-delay: 1s;
 }
 
 .bird-container--three {
   -webkit-animation-duration: 14.6s;
-          animation-duration: 14.6s;
+  animation-duration: 14.6s;
   -webkit-animation-delay: 9.5s;
-          animation-delay: 9.5s;
+  animation-delay: 9.5s;
 }
 
 .bird-container--four {
   -webkit-animation-duration: 16s;
-          animation-duration: 16s;
+  animation-duration: 16s;
   -webkit-animation-delay: 10.25s;
-          animation-delay: 10.25s;
+  animation-delay: 10.25s;
 }
 
 @-webkit-keyframes fly-cycle {
@@ -166,145 +184,145 @@
 @-webkit-keyframes fly-right-one {
   0% {
     -webkit-transform: scale(0.3) translateX(-10vw);
-            transform: scale(0.3) translateX(-10vw);
+    transform: scale(0.3) translateX(-10vw);
   }
   10% {
     -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
-            transform: translateY(2vh) translateX(10vw) scale(0.4);
+    transform: translateY(2vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
-            transform: translateY(0vh) translateX(30vw) scale(0.5);
+    transform: translateY(0vh) translateX(30vw) scale(0.5);
   }
   30% {
     -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
-            transform: translateY(4vh) translateX(50vw) scale(0.6);
+    transform: translateY(4vh) translateX(50vw) scale(0.6);
   }
   40% {
     -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
-            transform: translateY(2vh) translateX(70vw) scale(0.6);
+    transform: translateY(2vh) translateX(70vw) scale(0.6);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
-            transform: translateY(0vh) translateX(90vw) scale(0.6);
+    transform: translateY(0vh) translateX(90vw) scale(0.6);
   }
   60% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
 
 @keyframes fly-right-one {
   0% {
     -webkit-transform: scale(0.3) translateX(-10vw);
-            transform: scale(0.3) translateX(-10vw);
+    transform: scale(0.3) translateX(-10vw);
   }
   10% {
     -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
-            transform: translateY(2vh) translateX(10vw) scale(0.4);
+    transform: translateY(2vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
-            transform: translateY(0vh) translateX(30vw) scale(0.5);
+    transform: translateY(0vh) translateX(30vw) scale(0.5);
   }
   30% {
     -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
-            transform: translateY(4vh) translateX(50vw) scale(0.6);
+    transform: translateY(4vh) translateX(50vw) scale(0.6);
   }
   40% {
     -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
-            transform: translateY(2vh) translateX(70vw) scale(0.6);
+    transform: translateY(2vh) translateX(70vw) scale(0.6);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
-            transform: translateY(0vh) translateX(90vw) scale(0.6);
+    transform: translateY(0vh) translateX(90vw) scale(0.6);
   }
   60% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
 
 @-webkit-keyframes fly-right-two {
   0% {
     -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-            transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    transform: translateY(-2vh) translateX(-10vw) scale(0.5);
   }
   10% {
     -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
-            transform: translateY(0vh) translateX(10vw) scale(0.4);
+    transform: translateY(0vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
-            transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    transform: translateY(-4vh) translateX(30vw) scale(0.6);
   }
   30% {
     -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
-            transform: translateY(1vh) translateX(50vw) scale(0.45);
+    transform: translateY(1vh) translateX(50vw) scale(0.45);
   }
   40% {
     -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-            transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
-            transform: translateY(0vh) translateX(90vw) scale(0.45);
+    transform: translateY(0vh) translateX(90vw) scale(0.45);
   }
   51% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
 }
 
 @keyframes fly-right-two {
   0% {
     -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-            transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    transform: translateY(-2vh) translateX(-10vw) scale(0.5);
   }
   10% {
     -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
-            transform: translateY(0vh) translateX(10vw) scale(0.4);
+    transform: translateY(0vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
-            transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    transform: translateY(-4vh) translateX(30vw) scale(0.6);
   }
   30% {
     -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
-            transform: translateY(1vh) translateX(50vw) scale(0.45);
+    transform: translateY(1vh) translateX(50vw) scale(0.45);
   }
   40% {
     -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-            transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
-            transform: translateY(0vh) translateX(90vw) scale(0.45);
+    transform: translateY(0vh) translateX(90vw) scale(0.45);
   }
   51% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
 }
 
 #bg_text {
   -webkit-animation-duration: 3s;
-          animation-duration: 3s;
+  animation-duration: 3s;
 }
 /*# sourceMappingURL=main.css.map */
