--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -479,8 +479,7 @@ textarea {
   resize: vertical;
 }
 
-input::-moz-placeholder,
-textarea::-moz-placeholder {
+input::-moz-placeholder, textarea::-moz-placeholder {
   color: #a0aec0;
 }
 
@@ -166518,51 +166517,44 @@ video {
   }
 
   50% {
-    transform: translateY(0vh) translateX(90vw) scale(0.6);
+    transform: translateY(0vh) translateX(80vw) scale(0.5);
   }
 
-  60% {
-    transform: translateY(0vh) translateX(110vw) scale(0.6);
+  90% {
+    transform: translateY(0vh) translateX(100vw) scale(0.1);
   }
 
   100% {
-    transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(105vw) scale(0);
   }
 }
 
-@keyframes fly-right-two {
+/* @keyframes fly-right-two {
   0% {
     transform: translateY(-2vh) translateX(-10vw) scale(0.5);
   }
-
   10% {
     transform: translateY(0vh) translateX(10vw) scale(0.4);
   }
-
   20% {
     transform: translateY(-4vh) translateX(30vw) scale(0.6);
   }
-
   30% {
     transform: translateY(1vh) translateX(50vw) scale(0.45);
   }
-
   40% {
     transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
   }
-
   50% {
     transform: translateY(0vh) translateX(90vw) scale(0.45);
   }
-
   51% {
     transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
-
   100% {
     transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
-}
+} */
 
 #bg_text {
   animation-duration: 3s;
